# frilibrary

./: CMakeLists.txt  README.md  frilibrary-config-version.cmake.in  frilibrary-config.cmake.in  package.xml  patch_64bit.patch
KRL/: FRIControl.src
Linux/: ExternalTargets.global  Makefile  Makefile.global
Linux/FastResearchInterfaceLibrary/: Makefile
Linux/FastResearchInterfaceTest/: Makefile
Linux/LWRGettingStartedExamples/: Makefile
Linux/TypeIRML/: Makefile
etc/: 980039-FRI-Driver.init
include/: Console.h  DataLogging.h  Doxygen.h  FRICommunication.h  FastResearchInterface.h  FastResearchInterfaceTest.h  InitializationFileEntry.h  LWRBaseControllerInterface.h  LWRCartImpedanceController.h  LWRJointImpedanceController.h  LWRJointPositionController.h  LinuxAbstraction.h  MACOSAbstraction.h  OSAbstraction.h  QNXAbstraction.h  TypeIRML.h  TypeIRMLDecision.h  TypeIRMLInputParameters.h  TypeIRMLMath.h  TypeIRMLOutputParameters.h  TypeIRMLPolynomial.h  TypeIRMLProfiles.h  TypeIRMLVector.h  UDPSocket.h  WindowsAbstraction.h
include/frilibrary/: Console.h  DataLogging.h  FRICommunication.h  FastResearchInterface.h  FastResearchInterfaceTest.h  InitializationFileEntry.h  LWRBaseControllerInterface.h  LWRCartImpedanceController.h  LWRJointImpedanceController.h  LWRJointPositionController.h  OSAbstraction.h  TypeIRML.h  TypeIRMLInputParameters.h  TypeIRMLOutputParameters.h  TypeIRMLPolynomial.h  TypeIRMLProfiles.h  TypeIRMLVector.h  UDPSocket.h
src/FastResearchInterfaceLibrary/: Console.cpp  DataLogging.cpp  FastResearchInterface.cpp  GetCompleteRobotStateAndInformation.cpp  GetRobotControlData.cpp  GetRobotStatusData.cpp  GetUDPCommunicationData.cpp  InitializationFileEntry.cpp  KRCCommunicationThreadMain.cpp  LoggingMethods.cpp  ReadInitFile.cpp  SetControlScheme.cpp  SetRobotControlData.cpp  SetRobotStatusData.cpp  StartRobot.cpp  StopRobot.cpp  TimerThreadMain.cpp  UDPSocket.cpp  WaitForTicks.cpp
src/FastResearchInterfaceTest/: FastResearchInterfaceTest.cpp  MoveToCandle.cpp  RunTrajectorySimple.cpp
src/LWRGettingStartedExamples/: LWRCartImpedanceControlExample.cpp  LWRJointImpedanceControlExample.cpp  LWRJointPositionControlExample.cpp  LWRLoggingExample.cpp
src/LinuxAbstraction/: LinuxAbstraction.cpp
src/TypeIRML/: TypeIRML.cpp  TypeIRMLDecision.cpp  TypeIRMLMath.cpp  TypeIRMLPolynomial.cpp  TypeIRMLProfiles.cpp
